# dhcp

./: .gitignore  Cargo.toml  flake.nix
src/: client.rs  dhcp.rs  lib.rs  main.rs
src/client/: error.rs
src/dhcp/: codec.rs
