[package]
name = "router"
version = "0.1.0"
edition = "2024"

[dependencies]
dhcproto = "0.13.0"
futures = "0.3.31"
nix = { version = "0.30.1", features = ["net"] }
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["macros", "net", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.16", features = ["codec", "net"] }
